--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,8 @@
 <html ng-app="todoApp">
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-    <script src="todo.js"></script>
-    <link rel="stylesheet" href="todo.css">
+    <script src="/scripts/todo.js"></script>
+    <link rel="stylesheet" href="/styles/todo.css">
   </head>
   <body>
     <h2>Todo</h2>
